--- a/packages/theme/css/next/palette/positive.css
+++ b/packages/theme/css/next/palette/positive.css
@@ -4,8 +4,6 @@
   --salt-palette-positive: var(--salt-color-green-500);
   --salt-palette-positive-weaker: var(--salt-color-green-200);
   --salt-palette-positive-weakest: var(--salt-color-green-100);
-
-  --salt-palette-positive-action-hover: var(--salt-color-green-100);
 }
 
 .salt-theme.salt-theme-next[data-mode="dark"] {
@@ -14,6 +12,4 @@
   --salt-palette-positive: var(--salt-color-green-500);
   --salt-palette-positive-weaker: var(--salt-color-green-800);
   --salt-palette-positive-weakest: var(--salt-color-green-900);
-
-  --salt-palette-positive-action-hover: var(--salt-color-green-900);
 }
